Update model loading behavior
- loadWatchList() will search through files in data/watchlist directory and load any .json file exist as new watchlist
- loadWatchList(filename) will create a local json in watchlist directory if a new watchlist is created as a result.

--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ repositories {
 }
 
 application {
-    mainClass.set("group5.MovieInfoApp") /** Update with your main driver app location */
+    mainClass.set("group5.MovieListManager") /** Update with your main driver app location */
 }
 
 dependencies {
